--- a/applications/staging/deployment.yaml
+++ b/applications/staging/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
+  namespace: staging-app
 spec:
   type: ClusterIP
   selector:
@@ -17,6 +18,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-app-node
+  namespace: staging-app
   labels:
     app: frontend-app
     tier: app
