--- a/argocd/argocd-applications/frontend-global-staging.yaml
+++ b/argocd/argocd-applications/frontend-global-staging.yaml
@@ -12,6 +12,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: staging-app
-  # syncPolicy:
-  #   automated:
-  #     prune: true
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
